<resources>
    <string name="app_name">Graduation</string>
    <string name="title_activity_basic">Basic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">카메라 찍기</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_remote">리모컨</string>
    <string name="menu_now">실시간 보기</string>
    <string name="menu_progress">진행상황</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>
    <string name="nameFistTag">[</string>
    <string name="nameLastTag">]</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">어서와! 처음이지?</string>
    <string name="slide_1_desc">어떻게 사용하는지 모르겠지? 알려줄게!!</string>

    <string name="slide_2_title">만들고 싶어요~</string>
    <string name="slide_2_desc">다이어리 생성 혹은 추억을 생성하고 싶다면\n + 버튼을 누르면 추가되요!</string>

    <string name="slide_3_title">삭제는요?</string>
    <string name="slide_3_desc">다이어리는 해당 다이어리를 꾸~욱 눌러서!\n 추억은 가위 버튼을 눌러서! </string>

    <string name="slide_4_title">추억 수정도 가능해요~</string>
    <string name="slide_4_desc">제목,사진,내용부분을 꾸~욱 누르면 버튼이 생기고 수정한 후 버튼을 누르면 수정 완료!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
</resources>
