<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_now"
            android:icon="@drawable/now"
            android:title="@string/menu_now" />

        <item
            android:id="@+id/nav_remote"
            android:icon="@drawable/remote"
            android:title="@string/menu_remote"/>

        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/progress"
            android:title="@string/menu_progress"/>

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

</menu>
